# Computer_graphics_lab_1

./: CMakeLists.txt  main.cpp
